// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportCollection addGraphqlMutationImport should import mutation correctly 1`] = `
"import * as React from \\"react\\";
import { createPost } from \\"../graphql/mutations\\";"
`;

exports[`ImportCollection addGraphqlQueryImport should import query correctly 1`] = `
"import * as React from \\"react\\";
import { listPosts } from \\"../graphql/queries\\";"
`;

exports[`ImportCollection addGraphqlSubscriptionImport should import subscription correctly 1`] = `
"import * as React from \\"react\\";
import { onCreatePost } from \\"../graphql/subscriptions\\";"
`;

exports[`ImportCollection addImport multiple identical imports 1`] = `
"import * as React from \\"react\\";
import { Text } from \\"@aws-amplify/ui-react\\";"
`;

exports[`ImportCollection addImport multiple imports 1`] = `
"import * as React from \\"react\\";
import { Text } from \\"@aws-amplify/ui-react\\";
import { User } from \\"../models\\";"
`;

exports[`ImportCollection addImport multiple imports from the same package 1`] = `
"import * as React from \\"react\\";
import { Text, getOverrideProps } from \\"@aws-amplify/ui-react\\";"
`;

exports[`ImportCollection addImport one import 1`] = `
"import * as React from \\"react\\";
import { Text } from \\"@aws-amplify/ui-react\\";"
`;

exports[`ImportCollection addImport one relative import 1`] = `
"import * as React from \\"react\\";
import { User } from \\"../models\\";"
`;

exports[`ImportCollection addModelImport should use local models constant if using DataStore 1`] = `
"import * as React from \\"react\\";
import { Post } from \\"../models\\";"
`;

exports[`ImportCollection addModelImport should use path from rendererConfig if using GraphQL 1`] = `
"import * as React from \\"react\\";
import { Post } from \\"../API\\";"
`;

exports[`ImportCollection buildImportStatements multiple imports 1`] = `
"import * as React from \\"react\\";
import { Button, getOverrideProps } from \\"@aws-amplify/ui-react\\";
import { User } from \\"../models\\";"
`;

exports[`ImportCollection buildImportStatements no imports 1`] = `"import * as React from \\"react\\";"`;

exports[`ImportCollection buildSampleSnippetImports 1`] = `"import { MyButton } from \\"./ui-components\\";"`;

exports[`ImportCollection mergeCollections 1`] = `
"import * as React from \\"react\\";
import { Button, Text, getOverrideProps } from \\"@aws-amplify/ui-react\\";
import { User } from \\"../models\\";"
`;
